Fix alignment of 'how gov is run' columns
Floating to the right was causing the 'Other public bodies' col to
be before 'Government departments', which doesn't make a lot of
sense, despite being right in the source order.

--- a/app/assets/stylesheets/frontend/views/_how-gov-works.scss
+++ b/app/assets/stylesheets/frontend/views/_how-gov-works.scss
@@ -357,7 +357,6 @@
       }
     }
 
-    .depts-cont,
     .legislation,
     .access-information {
       .one-third {
@@ -384,7 +383,6 @@
   }
 
   @include media(tablet) {
-    .depts-cont,
     .legislation,
     .access-information {
       .one-third {
